@@ -614,7 +614,7 @@ class Test(BaseTest):
 
         # Check if two different files are in registry
         data = self.get_registry()
-        assert len(data) == 2
+        assert len(data) == 2, "expected to see 2 entries, got '%s'" % data
 
     def test_symlink_removed(self):
         """
